# DApp

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  app.rc
.github/workflows/: cmake-single-platform.yml
Fonts/: MaterialIcons-Regular.h  Poppins-Regular.h
Headers/: App.cpp  App.h  DApp.h  DFont.h  DVector.h  Texture.h  all-header.h
Image/: exit.c  maximize-2.c  maximize.c  minimize-2.c  minimize.c
Image/AppIcon/: generator.cpp
